feat: parse more fits/tiff metadata
